Org dosyasında kalın yazmayla ilgili bir sorun giderildi

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="tr" xml:lang="tr">
 <head>
-<!-- 2021-01-24 Sun 23:42 -->
+<!-- 2021-01-25 Mon 00:48 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Yazılım Gündemi</title>
@@ -256,7 +256,7 @@ for the JavaScript code in this tag.
 </p>
 </div>
 
-<div id="outline-container-org5557899" class="outline-2">
+<div id="outline-container-orga5b8745" class="outline-2">
 <h2 id="nedir">Nedir?</h2>
 <div class="outline-text-2" id="text-nedir">
 <p>
@@ -282,7 +282,7 @@ bulabilirsiniz.
 </p>
 </div>
 </div>
-<div id="outline-container-orgdecbd55" class="outline-2">
+<div id="outline-container-orgbb5ad7c" class="outline-2">
 <h2 id="motivasyon">Motivasyon</h2>
 <div class="outline-text-2" id="text-motivasyon">
 <p>
@@ -312,7 +312,7 @@ olmasın :).
 </p>
 </div>
 </div>
-<div id="outline-container-orgfba21eb" class="outline-2">
+<div id="outline-container-orgb0c445b" class="outline-2">
 <h2 id="arsiv">Arşiv</h2>
 <div class="outline-text-2" id="text-arsiv">
 <p>
@@ -321,15 +321,15 @@ aşağıdaki listeden bulabilirsiniz.
 </p>
 
 <p>
-<b><b>Toplam gündem sayısı:</b></b> 49
+<b>Toplam gündem sayısı:</b> 49
 </p>
 
 <p>
-<b><b>Toplam özel yazı sayısı:</b></b> 1
+<b>Toplam özel yazı sayısı:</b> 1
 </p>
 </div>
 
-<div id="outline-container-orge166596" class="outline-3">
+<div id="outline-container-org706a3d1" class="outline-3">
 <h3 id="arsiv-2020">2020</h3>
 <div class="outline-text-3" id="text-arsiv-2020">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides" width="100%">
@@ -558,7 +558,7 @@ aşağıdaki listeden bulabilirsiniz.
 </table>
 </div>
 </div>
-<div id="outline-container-orgc33ae8e" class="outline-3">
+<div id="outline-container-org91cdc5c" class="outline-3">
 <h3 id="arsiv-2019">2019</h3>
 <div class="outline-text-3" id="text-arsiv-2019">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides" width="100%">
@@ -763,7 +763,7 @@ aşağıdaki listeden bulabilirsiniz.
 </table>
 </div>
 </div>
-<div id="outline-container-orgd208ff0" class="outline-3">
+<div id="outline-container-orgb25368c" class="outline-3">
 <h3 id="ozel-yazilar">Özel Yazılar</h3>
 <div class="outline-text-3" id="text-ozel-yazilar">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides" width="100%">
@@ -793,7 +793,7 @@ aşağıdaki listeden bulabilirsiniz.
 </div>
 </div>
 </div>
-<div id="outline-container-org40a18bb" class="outline-2">
+<div id="outline-container-org72432ed" class="outline-2">
 <h2 id="kaynaklar">Kaynaklar</h2>
 <div class="outline-text-2" id="text-kaynaklar">
 <p>
@@ -830,7 +830,7 @@ oluşturduğum Custom Feed'im: <a href="https://www.reddit.com/user/erenhatirnaz
 </ul>
 </div>
 </div>
-<div id="outline-container-org8abf2a3" class="outline-2">
+<div id="outline-container-orgb4b423a" class="outline-2">
 <h2 id="kullandigim-araclar">Kullandığım Araçlar</h2>
 <div class="outline-text-2" id="text-kullandigim-araclar">
 <p>
@@ -867,7 +867,7 @@ zamanımda motivasyon bulabilirsem, yazım süreci ve teknik tarafla ilgili daha
 </p>
 </div>
 </div>
-<div id="outline-container-org3e9a625" class="outline-2">
+<div id="outline-container-orgbc6d354" class="outline-2">
 <h2 id="bilinen-sorunlar">Bilinen Sorunlar</h2>
 <div class="outline-text-2" id="text-bilinen-sorunlar">
 <ul class="org-ul">
@@ -895,7 +895,7 @@ bırakıyorum.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org118a357" class="outline-2">
+<div id="outline-container-org22a18ab" class="outline-2">
 <h2 id="lisans">Lisans</h2>
 <div class="outline-text-2" id="text-lisans">
 <div class="org-center">
@@ -917,7 +917,7 @@ Bu sayfa ve diğer tüm yazılım gündemi yazıları <a href="https://erenhatir
 <div id="postamble" class="status">
 <p class="date">Tarih: 24 Ocak 2021</p>
 <p class="author">Yazar: Eren Hatırnaz</p>
-<p class="date">Oluşturuldu: 2021-01-24 Sun 23:42</p>
+<p class="date">Oluşturuldu: 2021-01-25 Mon 00:48</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
